# anaddb_irreps

./: .gitignore  README.md  pyproject.toml  setup.py
agent_files/debug/: README.md  debug_kpoint_transform.py  debug_kpoint_transform2.py  find_transformation.py  test_tmfeo3.py  test_tmfeo3.sh
anaddb_irreps/: __init__.py  abipy_io.py  cli.py  cli.py.backup  io_phbst.py  irrep_backend.py  irreps_anaddb.py
docs/: 2D_irreps.md  activity_methodology.md  irreps_guide.md  usage.md
examples/: README.md  TmFeO3_phonopy_params.yaml  get_irreps_phonopy_BaTiO3.py
examples/1_basic_anaddb/: README.md  api_example.py  cli_example.sh
examples/1_basic_anaddb/MoS2_1T/: run_PHBST.nc
examples/1_basic_anaddb/MoS2_1T/anaddb_input/: out.DDB  run.files
examples/2_basic_phonopy/: BaTiO3_phonopy_params.yaml  README.md  cli_example.sh  cli_example_old.sh
examples/3_advanced_phonopy/: README.md
examples/4_multi_kpoint_anaddb/: .gitignore  LAO_PHBST.nc  README.md
examples/MoS2_1T/: get_irreps.py  result.txt  test.py
examples/MoS2_1T/anaddb_input/: run.abi  run.abo
examples/label_phbst_example/: README.md  label_example.py  mode_labels.txt
tests/: README.md  conftest.py  test_cli.py
tests/reference/2_basic_phonopy/: BaTiO3_phonopy_params.txt
tests/reference/3_advanced_phonopy/: TmFeO3_phonopy_params.txt
